<resources>
    <string name="app_name">Aplikasi SiMun</string>
    <string name="mdpl">Ketinggian</string>
    <string name="location">Lokasi</string>
    <string name="track">Jalur</string>
    <string-array name="title_education">
        <item>Hipotermia</item>
        <item>Tips Menghadapi Orang Terkena Hipotermia</item>
        <item>Tips Mencegah Terjadinya Hipotermia</item>
        <item>Tanda - Tanda Seseorang Terkena Hipotermia</item>
        <item>Tips Mendaki Saat Musim Hujan</item>
        <item>Larangan Saat Mendaki Gunung</item>
        <item>Tips Memasak Nasi di Gunung</item>
        <item>Tips Ketika Terjebak Badai</item>
        <item>Cara BAB di Gunung</item>
        <item>Faktor Penyebab Tersesat dan Hilang</item>
        <item>Tips Agar Tidak Tersesat</item>
        <item>Tips Jika Tersesat</item>
        <item>Tips Menghindari Petir di Gunung</item>
        <item>Tips Pendakian Pertama</item>
        <item>Tips Mendaki Gunung Ketika Menstruasi</item>

    </string-array>
    <string name="title_equipment">Nama Barang</string>
    <string name="mountain_name">Nama Gunung</string>
    <string name="equipment">Nama Perlengkapan</string>
    <string name="description">Deskripsi</string>
    <string-array name="data_name">
        <item>Gunung Kerinci</item>
        <item>Gunung Rinjani</item>
        <item>Gunung Semeru</item>
        <item>Gunung Merbabu</item>
        <item>Gunung Lawu</item>
        <item>Gunung Raung</item>
        <item>Gunung Agung</item>
        <item>Gunung Andong</item>
        <item>Gunung Gede</item>
        <item>Gunung Argopura</item>
        <item>Gunung Sumbing</item>
        <item>Gunung Sindoro</item>
        <item>Gunung Slamet</item>
        <item>Gunung Prau</item>
        <item>Gunung Ungaran</item>
    </string-array>
    <string-array name="location_name">
        <item>Jambi</item>
        <item>Nusa Tenggara Barat</item>
        <item>Jawa Timur</item>
        <item>Jawa Tengah</item>
        <item>Jawa Tengah</item>
        <item>Jawa Timur</item>
        <item>Bali</item>
        <item>Jawa Tengah</item>
        <item>Jawa Barat</item>
        <item>Jawa Timur</item>
        <item>Jawa Tengah</item>
        <item>Jawa Tengah</item>
        <item>Jawa Tengah</item>
        <item>Jawa Tengah</item>
        <item>Jawa Tengah</item>
    </string-array>
    <string-array name="mdpl_name">
        <item>3805 MDPL </item>
        <item>3762 MDPL</item>
        <item>3676 MDPL</item>
        <item>3145 MDPL</item>
        <item>3265 MDPL</item>
        <item>3332 MDPL</item>
        <item>3142 MDPL</item>
        <item>1726 MDPL</item>
        <item>2958 MDPL</item>
        <item>3088 MDPL</item>
        <item>3371 MDPL</item>
        <item>3153 MDPL</item>
        <item>3432 MDPL</item>
        <item>2590 MDPL</item>
        <item>2050 MDPL</item>
    </string-array>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login_now">Sudah Punya Akun? Login Disini</string>
    <string name="register_now">Belum Mempunyai Akun? Daftar Disini</string>
</resources>