<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginlogout.RegisterActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_gravity="left"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="left"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"

            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/pr_bar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/Simun"
        android:text="@string/register"
        android:textColor="@color/white" />
    <TextView
        android:paddingTop="10dp"
        android:id="@+id/login_now"
        android:text="@string/login_now"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>