<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:layout_height="match_parent"
    tools:context=".loginlogout.LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:textSize="25dp"
        />
    <TextView
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_gravity="left"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="left"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textColorHint="@color/white"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lupa Password?"
        android:paddingBottom="20dp"
        android:layout_gravity="right"/>

    <ProgressBar
        android:id="@+id/pr_bar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="263dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/Simun"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/register_now"
        android:text="@string/register_now"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ImageView
        android:paddingTop="20dp"
        android:id="@+id/ggl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/common_google_signin_btn_icon_light"/>

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/inetcon"
        android:text="Internet"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>